@@ -54,6 +54,7 @@ Misc:
  - GBA Video: Optimize sprite drawing
  - GBA BIOS: Use custom ArcTan, not relying on OS
  - PSP2: Sync files per descriptor
+ - GBA Savedata: Add realistic timing for EEPROM
 
 0.4.1: (2016-07-11)
 Bugfixes:
